# tapestry

./: .gitignore  Cargo.toml  flake.nix
src/: _main.rs  font.rs  lib.rs  linked_list.rs  main.rs  point_main.rs  point_shader.wgsl  triangle_shader.wgsl  ttf_parser.rs  ttf_parser_old.rs  ttf_reader.rs
src/font/: font_renderer.rs
src/ttf_parser/: intermediate_to_final.rs  raw_to_intermediate.rs
