[package]
name = "tapestry"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
#mircalla_types = { path = "../mircalla_types" }
mircalla_types = { git = "https://github.com/ioloboss/mircalla_types" }
